--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,15 +75,30 @@ form label {
 }
 
 header {
-  border-bottom: 1px solid #ccc;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1%;
+  background-image: url('../images/img3.jpeg');
+  background-size: cover;
 }
 
-header h1 {
-  font-size: 1em;
+header h1 a {
+  font-size: 75px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: white;
+}
+button#logout.logout, header a {
+  font-size: 25px;
+  color: white;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-color: none;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  text-decoration: none;
+  margin-left: 16px;
 }
 
 main {
@@ -170,9 +185,11 @@ main {
 }
 
 footer {
-  border-top: 1px solid #ccc;
+  color: white;
   display: flex;
   justify-content: center;
   padding: 1%;
   font-size: 110%;
+  background-image: url('../images/img3.jpeg');
+  background-size: cover;
 }
