updated dashboard handlebars

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,16 +3,12 @@
 
   <form class="new-post-form">
     <div>
-      <label for="post-title">Subject</label>
+      <label for="post-title">Title</label>
       <input type="text" id="post-title" name="post-title" />
     </div>
         <div>
-      <label for="post-text">Details</label>
+      <label for="post-text">Content</label>
       <input type="text" id="post-text" name="post-text" />
-    </div>
-    <div>
-      <label for="post-url">Resource Link</label>
-      <input id="post-url" name="post-url" />
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
