--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,13 +1,13 @@
 <article class="post">
   <div class="title">
-    <a href="/post/{{id}}" target="_blank">{{title}}</a>
+    <h3 href="/post/{{id}}" target="_blank">{{title}}</h3>
+    Posted by {{user.username}} on {{format_date created_at}}
   </div>
       <div class="post_text">
       {{post_text}}
     </div>
   <div class="meta">
- By {{user.username}} on {{format_date created_at}}
-    |
+Posted     |
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
   </div>
 </article>
