--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         <a href="/dashboard">Dashboard</a>
         <button id="logout" class="logout">Logout</button>
         {{else}}
-        <a href="/">Latest</a>
+        <a href="/">Home</a>
         <a href="/login">Login</a>
         {{/if}}
       </nav>
