--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,9 +11,11 @@ body, html {
 }
 
 a {
-  color: #3486eb;
+  color: white;
   font-weight: bold;
   transition: color .1s;
+  text-decoration: none;
+  background-color: #333;
 }
 
 ul {
@@ -23,19 +25,14 @@ ul {
 
 div.title {
   color: white;
-  align-content: flex-start;
   background-color: #333;
+  text-decoration: none;
 }
 
 li {
   border: hsl(0, 1%, 25%) solid 1px;
   text-decoration: none;
-  padding: .5%;
-  margin-top: .5%;
-}
-
-li::marker {
-  text-decoration: none;
+  margin-bottom: 2%;
 }
 
 a:hover {
@@ -154,7 +151,7 @@ main {
 }
 
 .post {
-  margin-bottom: 2%;
+  margin-bottom: 0%;
   line-height: 150%;
 }
 
