updated sql table and columns

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -8,7 +8,7 @@
       <input name="post-title" type="text" value="{{post.title}}" />
     </div>
         <div>
-      <input name="post-text" id="post-text" type="text" value="{{post.text}}" />
+      <input name="post-text" type="text" value="{{post.post_text}}" id="post-text" />
     </div>
     <div>
       by you on {{format_date post.created_at}}
